examples/test/testpolicy14538.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14538
  namespace: namespace450
spec:
  podSelector:
    matchLabels:
      key40: value36
      key26: value12
      key48: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value19
          key43: value43
          key10: value45
